# triton

./: CMakeLists.txt
include/triton/Conversion/TritonGPUToLLVM/: CompileUtils.h
include/triton/Dialect/Triton/IR/: TritonOps.td
include/triton/Dialect/TritonGPU/Transforms/: Passes.h  Passes.td
include/triton/Dialect/TritonNvidiaGPU/IR/: TritonNvidiaGPUOps.td
lib/Analysis/: Utility.cpp
lib/Conversion/TritonGPUToLLVM/: CMakeLists.txt  CompileUtils.cpp  ReduceOpToLLVM.cpp
lib/Conversion/TritonGPUToLLVM/Templates/: CMakeLists.txt  Compile.cpp  README.md  ReduceTemplate.cu  reduce.bc
lib/Conversion/TritonToTritonGPU/: TritonToTritonGPUPass.cpp
lib/Dialect/Triton/Transforms/: Combine.cpp  Combine.td
lib/Dialect/TritonGPU/Transforms/: AccelerateMatmul.cpp  CMakeLists.txt  FP32DotTC.cpp  RemoveLayoutConversions.cpp
python/: setup.py
python/src/: ir.cc  passes.cc
python/test/unit/language/: test_core.py  test_pipeliner.py
python/triton/language/: core.py  semantic.py
python/triton/ops/: flash_attention.py  matmul.py
python/triton/runtime/: interpreter.py
test/Analysis/: test-alias.mlir  test-allocation.mlir  test-membar.mlir
test/Conversion/: invalid.mlir  triton_ops.mlir  triton_to_tritongpu.mlir  tritongpu_to_llvm.mlir  tritongpu_to_llvm_hopper.mlir
test/Triton/: combine.mlir  rewrite-tensor-pointer.mlir
test/TritonGPU/: accelerate-matmul.mlir  combine.mlir  dot-operands.mlir  fence-inserstion.mlir  loop-pipeline-hopper.mlir  loop-pipeline.mlir  matmul.mlir  pipeline-hopper-remove-wait.mlir  prefetch.mlir  reorder-instructions.mlir
(+9 files in other folders)
